feat: change response cookies spec
